Began structuring form rendering utilities

--- a/front-end/src/styles/components/footer.scss
+++ b/front-end/src/styles/components/footer.scss
@@ -6,8 +6,9 @@
 }
 
 .footer {
-  @extend .text-bg-secondary !optional;
+  background-color: #99a5b5;
   @extend .text-center !optional;
+  @extend .text-light !optional;
 }
 
 .container {
