--- a/front-end/src/styles/components/routes.scss
+++ b/front-end/src/styles/components/routes.scss
@@ -1,7 +1,7 @@
 @use "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 .all-routes {
-  @extend .bg-secondary !optional;
+  background-color: #99a5b5;
 }
 .browser-router {
   @extend .d-flex !optional;
