--- a/front-end/src/styles/components/nav.scss
+++ b/front-end/src/styles/components/nav.scss
@@ -16,6 +16,7 @@
   @extend .container-fluid !optional;
   @extend .mt-0 !optional;
   @extend .pt-0 !optional;
+  @extend .sticky-top !optional;
 }
 
 .n1-bd {
